diesel_compile_tests/tests/fail/belongs_to_missing_foreign_key_field.stderr
error: No field with column name bar_id
 --> $DIR/belongs_to_missing_foreign_key_field.rs:7:21
  |
7 | #[diesel(belongs_to(Bar))]
  |                     ^^^

error: No field with column name bar_id
  --> $DIR/belongs_to_missing_foreign_key_field.rs:12:21
   |
12 | #[diesel(belongs_to(Bar))]
   |                     ^^^
